Modification to work with vagrant libvirt provider

--- a/ansible/elk.yml
+++ b/ansible/elk.yml
@@ -5,10 +5,10 @@
   roles:
     - { role: 'elk', tags: 'elk' }
 
-- name: Install log agent on windows vms
-  hosts: 
-    - srv01
-    - dc01
-    - dc02
-  roles:
-    - { role: 'logs_windows', tags: 'agent' }
+#- name: Install log agent on windows vms
+#  hosts: 
+#    - srv01
+#    - dc01
+#    - dc02
+#  roles:
+#    - { role: 'logs_windows', tags: 'agent' }
